# recognize-anything

./: .gitignore  LICENSE  MANIFEST.in  NOTICE.txt  README-ONNX.md  README.md  batch_inference.py  demo.ipynb  finetune.py  generate_tag_des_llm.py  gui_demo.ipynb  huggingface_web_demo.ipynb  inference.py  inference_ram.py  inference_ram_openset.py  inference_ram_plus.py  inference_ram_plus_openset.py  inference_ram_zeroshot_class.py  inference_tag2text.py  pretrain.py  requirements.txt  setup.cfg  utils.py
configs/: tag2text_caption.yaml
data/: ram_tag_list_chinese.txt  ram_tag_list_threshold.py
data/openimages_common_214/: openimages_common_214.txt  openimages_common_214_taglist.txt
data/openimages_rare_200/: openimages_rare_200.txt
data/test_file/: openimages_common_218class.txt
datasets/hico/: hico_600_annots.txt  hico_600_taglist.txt
datasets/imagenet_multi/: imagenet_multi_1000_annots.txt  imagenet_multi_1000_taglist.txt
datasets/openimages_common_214/: openimages_common_214_ram_annots.txt  openimages_common_214_ram_taglist.txt  openimages_common_214_tag2text_idannots.txt  openimages_common_214_tag2text_tagidlist.txt
datasets/openimages_rare_200/: openimages_rare_200_llm_tag_descriptions.json  openimages_rare_200_ram_annots.txt  openimages_rare_200_ram_taglist.txt
models/: bert.py  openset_utils.py  run_ram.py  run_ram_openset.py  tag2text.py  utils.py  zs_utils.py
models/util/: calculate_map.py  calculate_pr.py  inference.py
onnx/: export.py  inference.py
ram/: __init__.py  inference.py  transform.py
ram/data/: dataset.py
(+8 files in other folders)
