[metadata]
name = ram
version = 0.0.1
description = Recognize Anything Plus Model, Recognize Anything Model and Tag2Text Model

[options]
packages = find:
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    datasets
    images
    outputs
    pretrained
